Cycles AMD Vega GPU disabled due to compiler error #104097

Closed
opened 2023-01-23 17:18:11 +01:00 by Brecht Van Lommel · 5 comments

System Information
Operating system: Windows 10
Graphics card: gfx9xx

Blender Version
3.5 Alpha 37dfce5

Short description of error
Build error:
https://builder.blender.org/admin/#/builders/30/builds/8402/steps/7/logs/stdio

**System Information** Operating system: Windows 10 Graphics card: gfx9xx **Blender Version** 3.5 Alpha 37dfce5 **Short description of error** Build error: https://builder.blender.org/admin/#/builders/30/builds/8402/steps/7/logs/stdio
Author
Owner

Added subscriber: @brecht

Added subscriber: @brecht

This issue was referenced by 8e56ded86d

This issue was referenced by 8e56ded86d6261e8a937ab6ca8d724f0f42814c2
Author
Owner

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Author
Owner

Added subscribers: @BrianSavery, @Sayak-Biswas

Added subscribers: @BrianSavery, @Sayak-Biswas

Added subscriber: @silex

Added subscriber: @silex
Philipp Oeser removed the
Interest
Render & Cycles
label 2023-02-09 14:04:23 +01:00
Brecht Van Lommel added this to the Render & Cycles project 2023-02-09 19:38:51 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-02-13 22:53:21 +01:00
Brecht Van Lommel removed this from the Render & Cycles project 2023-02-17 14:16:00 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#104097
No description provided.