intern/cycles/blender/addon/properties.py
@@ -1679,12 +1679,12 @@ class CyclesPreferences(bpy.types.AddonPreferences):
                 import sys
                 if sys.platform[:3] == "win":
                     driver_version = "21.Q4"
-                    col.label(text="Requires AMD GPU with RDNA architecture", icon='BLANK1')
+                    col.label(text="Requires AMD GPU with Vega or RDNA architecture", icon='BLANK1')
                     col.label(text=iface_("and AMD Radeon Pro %s driver or newer") % driver_version,
                               icon='BLANK1', translate=False)
                 elif sys.platform.startswith("linux"):
                     driver_version = "22.10"
-                    col.label(text="Requires AMD GPU with RDNA architecture", icon='BLANK1')
+                    col.label(text="Requires AMD GPU with Vega or RDNA architecture", icon='BLANK1')
                     col.label(text=iface_("and AMD driver version %s or newer") % driver_version, icon='BLANK1',
                               translate=False)
             elif device_type == 'ONEAPI':
